# fiddlesticks

./: .gitignore  Cargo.toml  README.md  calib.py
.cargo/: config.toml
examples/: nrf_receiver.rs  nrf_rf.rs  nrf_transmitter.rs  pwm_test.rs  spi_test.rs
src/: calib.rs  lib.rs  madgwick.rs  main.rs  mpu_spi.rs  pid.rs  snippets.rs
